# fpgachina2025_45660

bitstream/: footprint.xpr
bitstream/footprint.cache/wt/: synthesis.wdf
bitstream/footprint.gen/sources_1/bd/loam_system/ip/loam_system_exact_loam_feature_e_0_0_1/drivers/exact_loam_feature_extraction_v1_0/src/: CMakeLists.txt  Makefile  xexact_loam_feature_extraction.c  xexact_loam_feature_extraction.h  xexact_loam_feature_extraction_hw.h  xexact_loam_feature_extraction_linux.c  xexact_loam_feature_extraction_sinit.c
bitstream/footprint.hw/hw_1/: hw.xml
bitstream/footprint.runs/.jobs/: vrs_config_1.xml
bitstream/footprint.runs/impl_1/: .vivado.begin.rst  .write_bitstream.begin.rst  clockInfo.txt  gen_run.xml  htr.txt  init_design.pb  iter_100_CongestedCLBsAndNets.txt  iter_120_CongestedCLBsAndNets.txt  loam_system_wrapper.tcl  loam_system_wrapper.vdi  loam_system_wrapper_bus_skew_routed.rpt  loam_system_wrapper_bus_skew_routed.rpx  loam_system_wrapper_clock_utilization_routed.rpt  loam_system_wrapper_control_sets_placed.rpt  loam_system_wrapper_drc_opted.pb  opt_design.pb  place_design.pb  (+25 more)
evaluation_slam/kissicp/: kissicp_00.txt  kissicp_02.txt  kissicp_04.txt  kissicp_05.txt  kissicp_06.txt  kissicp_08.txt  kissicp_10.txt
evaluation_slam/orb3_original/: OrbSlam3_00.txt  OrbSlam3_01.txt  OrbSlam3_02.txt  OrbSlam3_04.txt  OrbSlam3_05.txt  OrbSlam3_06.txt  OrbSlam3_07.txt  OrbSlam3_08.txt  OrbSlam3_09.txt  OrbSlam3_10.txt  orbSpecial00.txt  orbSpecial02.txt  result of orb and orb optimized_shown by CameraTrajectory.docx
evaluation_slam/vloam/: Lvloam_04.txt  Mvloam_04.txt  Vvloam_04.txt
(+558 files in other folders)
